fixed iphone scaling by removing img div flex property

--- a/views/allie.ejs
+++ b/views/allie.ejs
@@ -145,7 +145,7 @@
                             </h3>
                         </div>
                         <div class="pupper">
-                            <img src="/images/allie/wyatt_0.jpg" alt="">
+                            <img src="/images/bred_by/wyatt/wyatt_bredby.jpg" alt="">
                             <h3>
                                 HIGHLINES WYATT OF TOMBSTONE BN GS-O RS-N RNX
                                 <br>
