--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -75,13 +75,12 @@ h1{
     }
 }
 #homeImg, #aboutImage, #contactImage{
-    display: flex;
-    justify-content: center;
+    
     width: 80%;
     margin: auto;
     height: auto;
     @media screen and (max-width: 1199px){
-        width: 100%;
+        width: 80vw;
         
     }
     
@@ -417,18 +416,16 @@ h1{
         padding-bottom: 40px;
     }
     .dogMainImg{
-        display: flex;
-        justify-content: center;
+        width: 70%;
+        margin: auto;
         @media screen and (max-width:805px){
             width: 80vw;
             
         }
+        
         img{
-            width: 60%;
-            @media screen and (max-width:805px){
-                width: 80vw;
-                
-            }
+            width: 100%;
+            
             
         }
     }
