--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -68,7 +68,8 @@ h1{
     text-align: center;
 }
 #homeImageBox{
-    height: auto;
+    height: auto; 
+    margin: auto;
     @media screen and (max-width: 1199px){
         width: 80vw;
         max-height: 1000px;
@@ -105,13 +106,14 @@ h1{
     // // background-size: inherit;
 }
 .imgBox{
-    display: flex;
-    flex-direction: row;
+    // display: flex;
+    // flex-direction: row;
     justify-content: center;
     img{
         max-width: 100%;
         width: 60%;
         height: auto;
+        margin: auto;
         @media screen and (max-width:440px){
             width: 90vw;
             height: auto;
