--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -108,17 +108,19 @@ h1{
 .imgBox{
     // display: flex;
     // flex-direction: row;
-    justify-content: center;
+    // justify-content: center;
+    margin: auto;
+    width: 90%;
+    @media screen and (max-width:440px){
+            width: 90vw;
+           
+        }
     img{
         max-width: 100%;
-        width: 60%;
+        width:100%;
         height: auto;
         margin: auto;
-        @media screen and (max-width:440px){
-            width: 90vw;
-            height: auto;
-            margin: auto;
-        }
+        
     }
 }
 
