compressed images in litter raising

--- a/views/litter_raising.ejs
+++ b/views/litter_raising.ejs
@@ -30,7 +30,7 @@
     </div>
     <div class="sliderBox">
         <div class="slider-for for1">
-            <div><img src="/images/puppy_raising/IMG_1029.JPEG" alt=""></div>
+            <div><img src="/images/puppy_raising/IMG_1029.jpg" alt=""></div>
             <div><img src="/images/puppy_raising/new_upload1.jpg" alt=""></div>
             <div><img src="/images/puppy_raising/new_upload3.jpg" alt=""></div>
             <div><img src="/images/puppy_raising/new_upload4.jpg" alt=""></div>
@@ -54,7 +54,7 @@
 
     <div class="sliderNavBox">
         <div class="slider-nav nav1">
-            <div class="slide"><img src="/images/puppy_raising/IMG_1029.JPEG" alt=""></div>
+            <div class="slide"><img src="/images/puppy_raising/IMG_1029.jpg" alt=""></div>
             <div class="slide"><img src="/images/puppy_raising/new_upload1.jpg" alt=""></div>
             <div class="slide"><img src="/images/puppy_raising/new_upload3.jpg" alt=""></div>
             <div class="slide"><img src="/images/puppy_raising/new_upload4.jpg" alt=""></div>
