tango image update

--- a/views/allie.ejs
+++ b/views/allie.ejs
@@ -164,7 +164,7 @@
                 <div class="offspringElement">
                     <div class="offspringSire ">
                         <h1>Sire: Tango</h1>
-                        <img src="/images/tango/tangosm.jpg" alt="">
+                        <img src="/images/tango/Tangosm.jpg" alt="">
                         <h3>
                             MBIS MBISS GCh. ASCA CH Silverwood's Kiss of Fire at Limelite
                             <br>
