--- a/views/lulu.ejs
+++ b/views/lulu.ejs
@@ -160,7 +160,7 @@
         <div class="sireDamDiv">
             <div class="sireDamElement">
                 <h1>Sire</h1>
-                <img src="/images/tango/tangosm.jpg" alt="">
+                <img src="/images/tango/Tangosm.jpg" alt="">
                 <h3>
                     MBIS MBISS GCh. ASCA CH <br><strong>Silverwood's Kiss of Fire at Limelite</strong><br>
                     <br>
