more broked links

--- a/views/allie.ejs
+++ b/views/allie.ejs
@@ -135,7 +135,7 @@
                                 Owned by Kim Edlin and Jacquie Hallenbeck </h3>
                         </div>
                         <div class="pupper">
-                            <img src="/images/stout/stoutsm.jpg" alt="">
+                            <img src="/images/stout/stoutSM.jpg" alt="">
                             <h3>
                                 AKC GCH ASCA CH Highlines Well Did You Evah?
                                 <br>
