more f***ing capital letter issues...

--- a/views/shimmer.ejs
+++ b/views/shimmer.ejs
@@ -137,7 +137,7 @@
         <div class="sireDamDiv">
             <div class="sireDamElement">
                 <h1>Sire</h1>
-                <img src="/images/shimmer/Rhettsm.jpg" alt="">
+                <img src="/images/Shimmer/Rhettsm.jpg" alt="">
                 <h3>
                     ASCA CH <br><strong>Absoloot Shake Your South Side</strong>
                     <br>
@@ -148,7 +148,7 @@
             </div>
             <div class="sireDamElement">
                 <h1>Dam</h1>
-                <img src="/images/shimmer/Kandism.jpg" alt="">
+                <img src="/images/Shimmer/Kandism.jpg" alt="">
                 <h3>
                     ASCA CH <strong>Absoloot Eye Kandi</strong>
 
