--- a/views/lulu.ejs
+++ b/views/lulu.ejs
@@ -22,9 +22,9 @@
                 footsteps with an extremely successful conformation career. She took her first four and five point
                 ASCA majors out of the 9-12 class going BOW both times and a BOS over a nice group of specials owner
                 handled. She won the huge 9-12 puppy class three times at nationals and thrilled us by taking RWB at
-                one of the pre-shows beautifully handled by good friend kristina Churchill. She finished both AKC
+                one of the pre-shows beautifully handled by good friend Kristina Churchill. She finished both AKC
                 and ASCA championships with ease by going BOB in both venues over multiple lovely specials. Not only
-                is lulu beautifully put together but she is the most talented performance dog I’ve ever had the good
+                is Lulu beautifully put together but she is the most talented performance dog I’ve ever had the good
                 fortune to own. Whether it’s rally, obedience, herding, barn hunt or agility she approaches each
                 discipline with drive, focus and an abundance of natural talent. Lulu has been tested on livestock
                 and not surprisingly she shows a ton of natural aptitude, she will start her herding career once she’s
