--- a/views/partials/_copyright.ejs
+++ b/views/partials/_copyright.ejs
@@ -4,7 +4,7 @@
         <p>Greenwood Village CO</p>
         <p>Cell: (303) 638-3590</p>
         <br>
-        <p><a href="mailto:jacquiehallenbeck@me.com">jacquiehallenbeck@me.com</a></p>
+        <p><a href="mailto:hallenbeckjacquie@msn.com">hallenbeckjacquie@msn.com</a></p>
     </div>
     
 </div>
