--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -23,11 +23,12 @@
 <body>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="/whatInput/what-input.js"></script>
-    <!-- <script src="/foundation/js/foundation.js"></script> -->
-    <script src="https://cdn.jsdelivr.net/npm/foundation-sites@6.6.3/dist/js/foundation.min.js" integrity="sha256-pRF3zifJRA9jXGv++b06qwtSqX1byFQOLjqa2PTEb2o=" crossorigin="anonymous"></script>
-
-    
+    <script src="/foundation/js/foundation.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/foundation-sites@6.6.3/dist/js/foundation.min.js" integrity="sha256-pRF3zifJRA9jXGv++b06qwtSqX1byFQOLjqa2PTEb2o=" crossorigin="anonymous"></script> -->
     <script type="text/javascript" src="/css/slick/slick.min.js"></script>
+    
+    
+    
     <div id="mainContainer">
         <div id="contentBox">
             <%- include ('partials/nav_bar') %>
@@ -38,10 +39,10 @@
 
     </div>
 
+    
+
+
     <script type="text/javascript" src="/js/app.js"></script>
-
-
-
 </body>
 
 </html>
