photo pre compression

--- a/views/crush.ejs
+++ b/views/crush.ejs
@@ -17,7 +17,7 @@
             <p>
                 Crush came to us from our friends at Sonkist Australian Shepherds in California. He is out of HOF
                 BISS/BIS CH Carolina Calais On The Fly, (number 1 ASCA intact 2008/2009) and ASCA/AKC CH Calais Carolina
-                Call Me Classic, DNA-VP Crush did not make it as a show dog and was neutered at 15 months but he was a
+                Call Me Classic, DNA-VP. Crush did not make it as a show dog and was neutered at 15 months but he is a
                 very much loved member of the family who soon found his calling as a service dog for my son Ross who has
                 type 1 diabetes. Crush is a very smart, empathetic dog who very quickly became an expert at detecting
                 low blood sugar. On more than one occasion he has prevented Ross from going into a diabetic coma and has
