--- a/views/dela.ejs
+++ b/views/dela.ejs
@@ -29,7 +29,7 @@
                 was the dog who kindled my passion for agility. Dela forced me to become a thoughtful, positive and fair
                 handler and I wouldn’t be the trainer I am today if not for her. Together we earned multiple High in
                 Trials and top placements at our National Specialties. She holds a special place in my friend and mentor
-                Terri Morgan’s heart too, not only as Dela’s breeder/co-owner but as her handler to her first WTCH. This
+                Terri Morgan’s heart too, not only as Dela’s breeder/co-owner but as her handler to her first WTCH(Hearding Trial Championship). This
                 was an accomplishment that I know both of us won’t forget in a hurry.
                 <br><br>
                 Dela is chief puppy raiser here at Highline Aussies, from the moment the dam is ok with Dela stepping in
