--- a/views/litter_raising.ejs
+++ b/views/litter_raising.ejs
@@ -209,7 +209,7 @@
         <p>
             <br>
             At 7-8 weeks the litter is evaluated by a few friends who are breeder judges. At this time the show
-            prospects
+            prospects are
             identified. All puppies are also personality tested using the Volhard <a
                 href="https://www.searchdogs.co.nz/wp-content/uploads/2017/03/Volhard-Puppy-Aptitude-Test.pdf">method</a>
             which helps us
