--- a/views/lulu.ejs
+++ b/views/lulu.ejs
@@ -148,7 +148,7 @@
                 <br>
                 Eyes cleared annually | Bite: Full Dentition/Scissors
                 <br>
-                <a href="/files/Pedigree.pdf" target="_blank">Genetic health testing results and Pedigree </a>
+                <a href="/files/lulu_health.pdf" target="_blank">Genetic health testing results</a>
                 <br>
                 <strong>Breeder/Owner</strong>: Jacquie Hallenbeck
 
