--- a/views/shimmer.ejs
+++ b/views/shimmer.ejs
@@ -57,7 +57,7 @@
                 <br>
                 <br>
                 Shimmer is currently in training for agility and rally where she shows great promise and will soon start
-                stock which she has already proven to have natural talent to for.
+                stock which she has already proven to have natural talent for.
                 <br>
                 <br>
                 Shimmer will be bred in the spring of 2021. Check our litter page closer to that time for details.
