--- a/views/deacon.ejs
+++ b/views/deacon.ejs
@@ -8,7 +8,7 @@
                 <div class="sliderBox" data-dog='deacon'>
                     <div class="slider-for">
                         <div><img src="/images/bred_by/deacon/deacon_slider/deacon_6.jpg"></div>
-                        <div><img src="/images/bred_by/deacon/deacon_slider/deacon_0.jpg"></div>
+                        <!-- <div><img src="/images/bred_by/deacon/deacon_slider/deacon_0.jpg"></div> -->
                         <div><img src="/images/bred_by/deacon/deacon_slider/deacon_1.jpg"></div>
                         <div><img src="/images/bred_by/deacon/deacon_slider/deacon_10.jpg"></div>
                         <div><img src="/images/bred_by/deacon/deacon_slider/deacon_11.jpg"></div>
@@ -46,7 +46,7 @@
                 <div class="sliderNavBox">
                     <div class="slider-nav">
                         <div class="slide"><img src="/images/bred_by/deacon/deacon_slider/deacon_6.jpg"></div>
-                        <div class="slide"><img src="/images/bred_by/deacon/deacon_slider/deacon_0.jpg"></div>
+                        <!-- <div class="slide"><img src="/images/bred_by/deacon/deacon_slider/deacon_0.jpg"></div> -->
                         <div class="slide"><img src="/images/bred_by/deacon/deacon_slider/deacon_1.jpg"></div>
                         <div class="slide"><img src="/images/bred_by/deacon/deacon_slider/deacon_10.jpg"></div>
                         <div class="slide"><img src="/images/bred_by/deacon/deacon_slider/deacon_11.jpg"></div>
