uploading compressed images

--- a/views/bogart.ejs
+++ b/views/bogart.ejs
@@ -13,7 +13,18 @@
                     <div class="slider-for">
                     
                         <div><img src="/images/bred_by/bogart/bogart_slider/bogart_0.jpg"></div><div><img src="/images/bred_by/bogart/bogart_slider/bogart_1.jpg"></div><div><img src="/images/bred_by/bogart/bogart_slider/bogart_2.jpg"></div><div><img src="/images/bred_by/bogart/bogart_slider/bogart_3.jpg"></div><div><img src="/images/bred_by/bogart/bogart_slider/bogart_4.jpg"></div><div><img src="/images/bred_by/bogart/bogart_slider/bogart_5.jpg"></div><div><img src="/images/bred_by/bogart/bogart_slider/bogart_6.jpg"></div><div><img src="/images/bred_by/bogart/bogart_slider/bogart_7.jpg"></div><div><img src="/images/bred_by/bogart/bogart_slider/bogart_8.jpg"></div></div>
-                </div>
+                <div class="slide"><img src="/images/bred_by/bogart/bogart_slider/bogart_4-220.jpg"></div>
+                        <div class="slide"><img src="/images/bred_by/bogart/bogart_slider/bogart_4-221.jpg"></div>
+                        <div class="slide"><img src="/images/bred_by/bogart/bogart_slider/bogart_4-222.jpg"></div>
+                        <div class="slide"><img src="/images/bred_by/bogart/bogart_slider/bogart_4-223.jpg"></div>
+                        <div class="slide"><img src="/images/bred_by/bogart/bogart_slider/bogart_4-224.jpg"></div>
+                        <div class="slide"><img src="/images/bred_by/bogart/bogart_slider/bogart_4-225.jpg"></div>
+                        <div class="slide"><img src="/images/bred_by/bogart/bogart_slider/bogart_4-226.jpg"></div>
+                        <div class="slide"><img src="/images/bred_by/bogart/bogart_slider/bogart_4-227.jpg"></div>
+                        <div class="slide"><img src="/images/bred_by/bogart/bogart_slider/bogart_4-228.jpg"></div>
+                        <div class="slide"><img src="/images/bred_by/bogart/bogart_slider/bogart_4-229.jpg"></div>
+                        <div class="slide"><img src="/images/bred_by/bogart/bogart_slider/bogart_4-2210.jpg"></div>
+                    </div>
 
         <div class="dogTitle bredByDog">
             <h3>
@@ -26,7 +37,9 @@
                 <div class="sliderNavBox">
                     <div class="slider-nav">
                         <div class="slide"><img src="/images/bred_by/bogart/bogart_slider/bogart_0.jpg"></div><div class="slide"><img src="/images/bred_by/bogart/bogart_slider/bogart_1.jpg"></div><div class="slide"><img src="/images/bred_by/bogart/bogart_slider/bogart_2.jpg"></div><div class="slide"><img src="/images/bred_by/bogart/bogart_slider/bogart_3.jpg"></div><div class="slide"><img src="/images/bred_by/bogart/bogart_slider/bogart_4.jpg"></div><div class="slide"><img src="/images/bred_by/bogart/bogart_slider/bogart_5.jpg"></div><div class="slide"><img src="/images/bred_by/bogart/bogart_slider/bogart_6.jpg"></div><div class="slide"><img src="/images/bred_by/bogart/bogart_slider/bogart_7.jpg"></div><div class="slide"><img src="/images/bred_by/bogart/bogart_slider/bogart_8.jpg"></div></div>
-                </div>
+                        
+                        
+                    </div>
             <div class="dogText1 dogText">
             <h3>
                 <strong>OWNED BY:</strong> CANDI KNOPP
