--- a/views/lulu.ejs
+++ b/views/lulu.ejs
@@ -86,6 +86,8 @@
                 <div><img src="/images/lulu/lulu_slider/lulu_gallery7.jpg"></div>
                 <div><img src="/images/lulu/lulu_slider/lulu_gallery8.jpg"></div>
                 <div><img src="/images/lulu/lulu_slider/lulu_gallery9.jpg"></div>
+                <div><img src="/images/lulu/lulu_slider/lulu_herding0.jpg"></div>
+                <div><img src="/images/lulu/lulu_slider/lulu_herding1.jpg"></div>
                 <div><img src="/images/lulu/lulu_slider/lulu_main2.jpg"></div>
                 <div><img src="/images/lulu/lulu_slider/lulu_main4.jpg"></div>
                 <div><img src="/images/lulu/lulu_slider/lulu_main5.jpg"></div>
@@ -132,6 +134,8 @@
                 <div class="slide"><img src="/images/lulu/lulu_slider/lulu_gallery7.jpg"></div>
                 <div class="slide"><img src="/images/lulu/lulu_slider/lulu_gallery8.jpg"></div>
                 <div class="slide"><img src="/images/lulu/lulu_slider/lulu_gallery9.jpg"></div>
+                <div class="slide"><img src="/images/lulu/lulu_slider/lulu_herding0.jpg"></div>
+                <div class="slide"><img src="/images/lulu/lulu_slider/lulu_herding1.jpg"></div>
                 <div class="slide"><img src="/images/lulu/lulu_slider/lulu_main2.jpg"></div>
                 <div class="slide"><img src="/images/lulu/lulu_slider/lulu_main4.jpg"></div>
                 <div class="slide"><img src="/images/lulu/lulu_slider/lulu_main5.jpg"></div>
