fixed spelling error

--- a/views/litters.ejs
+++ b/views/litters.ejs
@@ -43,7 +43,7 @@
             <br>
             As it looks like a large litter we may have a couple of companion puppies available. If you are interested
             in a puppy
-            please complete our puppy questionnaire (Enter link)or contact us for more details on this litter.
+            please complete our puppy questionnaire at the bottom of the page, or contact us for more details on this litter.
             <br>
             <br>
             Puppies are sold on spay/neuter contracts only. Our puppies are priced at $2000 and come with eye exams with
