--- a/views/partials/nav_bar.ejs
+++ b/views/partials/nav_bar.ejs
@@ -19,7 +19,7 @@
         </li>
         <li class="dropMenu"><a href="/litters" >LITTERS</a>
             <ul class="menu vertical">
-                <li><a href="/litters/2020"><strong>!NEW! 2020 Upcsomming Litter</strong></a></li>
+                <li><a href="/litters/2020"><strong>!NEW! 2020 Upcomming Litter</strong></a></li>
                 <!-- <li><a href=""></a></li> -->
                 <li><a href="/litters/development">Puppy Early Development</a></li>
                 <li><a href="/litters/past">Past Litters</a></li>
