added week 1 puppy update

--- a/views/lulu_litter.ejs
+++ b/views/lulu_litter.ejs
@@ -29,36 +29,70 @@
     </div>
     <div class="mainStyle">
         <p>
-            AKC GCH/ASCA CH Highline’s To Sir With Love (<a href="/ourdogs/lulu">LULU</a>) has been bred and confirmed pregnant to 
-            AKC CH/ASCA CH Calais Carolina Your Place Or Mine (<a href="http://www.calaisaussies.com/chandler.html">CHANDLER</a>)
+            Lulu and Chandler presented us with 8 fat and healthy puppies. The four girls and four boys were born on May 12th 2020 and are absolutely stunning. We are excited to watch them grow and will be providing weekly updated photos and videos to this page!
             <br>
-            <br>
-            We expect exceptionally happy, confident, biddable and beautiful puppies from this cross. Blues and blacks possible.
-            <br>
-            <br>
-            As it looks like a large litter we may have a couple of companion puppies available. If you are interested in a puppy
-            please complete our puppy questionnaire at the bottom of the page, or contact us for more details on this litter.
-            <br>
-            <br>
-            Puppies are sold on spay/neuter contracts only. Our puppies are priced at $2000 and come with eye exams with a licensed
-            ophthalmologist, health check, first vaccinations and microchips. They have started crate training, clicker training,
-            leash training and have been exposed to many different social environments. 
-            <br><br>Most people know not to buy from pet stores as doing so supports puppy mills. But how do you find a
-            reputable breeder and what is the difference between a hobby breeder and a backyard breeder? Read <a
-                href="/files/A-COMPARISON-OF-Responsible-Hobby-Breeders-and-Backyard-Breeders.pdf" target="_blank">this
-                excellent comparison by Victoria Rose.</a>
-            <br><br>
-            A couple of things I would like to add. A reputable breeder never charges more for a certain coat or eye
-            color. They don’t charge more for a female over a male. They also would never have a buy it now option on
-            their website. If you are considering buying from a breeder that does any of the above then you are looking
-            at buying from a backyard breeder.
-            <br><br>
-            Please see how we raise litters <a href="/litters/development">HERE</a>
-            <br><br>
-            Interested in our litter? Fill out our puppy questionnaire <a href="/files/Highline_Aussies_Questionnaire.doc" download>HERE</a> 
-
+            Our reservation list is full at this time. 
 
         </p>
     </div>
-    
+    <div class="sliderBox">
+        <div class="slider-for for1">
+            <div><img src="/images/2020_litter/weekly/week1/litter_week1_1.jpg" alt=""></div>
+            <div><img src="/images/2020_litter/weekly/week1/litter_week1_0.jpg" alt=""></div>
+            <div><img src="/images/2020_litter/weekly/week1/litter_week1_2.jpg" alt=""></div>
+            <div><img src="/images/2020_litter/weekly/week1/litter_week1_3.jpg" alt=""></div>
+            <div><img src="/images/2020_litter/weekly/week1/litter_week1_4.jpg" alt=""></div>
+            <div><img src="/images/2020_litter/weekly/week1/litter_week1_5.jpg" alt=""></div>
+            <div><img src="/images/2020_litter/weekly/week1/litter_week1_6.jpg" alt=""></div>
+            <div><img src="/images/2020_litter/weekly/week1/litter_week1_7.jpg" alt=""></div>
+            <div><img src="/images/2020_litter/weekly/week1/litter_week1_8.jpg" alt=""></div>
+            <div><img src="/images/2020_litter/weekly/week1/litter_week1_9.jpg" alt=""></div>
+            <div><img src="/images/2020_litter/weekly/week1/litter_week1_10.jpg" alt=""></div>
+            <div><img src="/images/2020_litter/weekly/week1/litter_week1_11.jpg" alt=""></div>
+            <div><img src="/images/2020_litter/weekly/week1/litter_week1_12.jpg" alt=""></div>
+            <div><img src="/images/2020_litter/weekly/week1/litter_week1_13.jpg" alt=""></div>
+            <div><img src="/images/2020_litter/weekly/week1/litter_week1_14.jpg" alt=""></div>
+            <div><img src="/images/2020_litter/weekly/week1/litter_week1_15.jpg" alt=""></div>
+            <div><img src="/images/2020_litter/weekly/week1/litter_week1_16.jpg" alt=""></div>
+            <div><img src="/images/2020_litter/weekly/week1/litter_week1_17.jpg" alt=""></div>
+            <div><img src="/images/2020_litter/weekly/week1/litter_week1_18.jpg" alt=""></div>
+            <div><img src="/images/2020_litter/weekly/week1/litter_week1_19.jpg" alt=""></div>
+            <div><img src="/images/2020_litter/weekly/week1/litter_week1_20.jpg" alt=""></div>
+            <div><img src="/images/2020_litter/weekly/week1/litter_week1_21.jpg" alt=""></div>
+            <div><img src="/images/2020_litter/weekly/week1/litter_week1_22.jpg" alt=""></div>
+            <div><img src="/images/2020_litter/weekly/week1/litter_week1_23.jpg" alt=""></div>
+            
+        </div>
+    </div>
+
+    <div class="sliderNavBox">
+        <div class="slider-nav nav1">
+            <div><img src="/images/2020_litter/weekly/week1/litter_week1_1.jpg" alt=""></div>
+            <div><img src="/images/2020_litter/weekly/week1/litter_week1_0.jpg" alt=""></div>
+            <div><img src="/images/2020_litter/weekly/week1/litter_week1_2.jpg" alt=""></div>
+            <div><img src="/images/2020_litter/weekly/week1/litter_week1_3.jpg" alt=""></div>
+            <div><img src="/images/2020_litter/weekly/week1/litter_week1_4.jpg" alt=""></div>
+            <div><img src="/images/2020_litter/weekly/week1/litter_week1_5.jpg" alt=""></div>
+            <div><img src="/images/2020_litter/weekly/week1/litter_week1_6.jpg" alt=""></div>
+            <div><img src="/images/2020_litter/weekly/week1/litter_week1_7.jpg" alt=""></div>
+            <div><img src="/images/2020_litter/weekly/week1/litter_week1_8.jpg" alt=""></div>
+            <div><img src="/images/2020_litter/weekly/week1/litter_week1_9.jpg" alt=""></div>
+            <div><img src="/images/2020_litter/weekly/week1/litter_week1_10.jpg" alt=""></div>
+            <div><img src="/images/2020_litter/weekly/week1/litter_week1_11.jpg" alt=""></div>
+            <div><img src="/images/2020_litter/weekly/week1/litter_week1_12.jpg" alt=""></div>
+            <div><img src="/images/2020_litter/weekly/week1/litter_week1_13.jpg" alt=""></div>
+            <div><img src="/images/2020_litter/weekly/week1/litter_week1_14.jpg" alt=""></div>
+            <div><img src="/images/2020_litter/weekly/week1/litter_week1_15.jpg" alt=""></div>
+            <div><img src="/images/2020_litter/weekly/week1/litter_week1_16.jpg" alt=""></div>
+            <div><img src="/images/2020_litter/weekly/week1/litter_week1_17.jpg" alt=""></div>
+            <div><img src="/images/2020_litter/weekly/week1/litter_week1_18.jpg" alt=""></div>
+            <div><img src="/images/2020_litter/weekly/week1/litter_week1_19.jpg" alt=""></div>
+            <div><img src="/images/2020_litter/weekly/week1/litter_week1_20.jpg" alt=""></div>
+            <div><img src="/images/2020_litter/weekly/week1/litter_week1_21.jpg" alt=""></div>
+            <div><img src="/images/2020_litter/weekly/week1/litter_week1_22.jpg" alt=""></div>
+            <div><img src="/images/2020_litter/weekly/week1/litter_week1_23.jpg" alt=""></div>
+            
+        </div>
+    </div>
 </div>
+<script src="/js/2020litter.js"></script>
