new litter update

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -13,7 +13,7 @@
             raise outstanding Australian Shepherds that are not only beautiful but have good structure, superb
             temperaments, excellent health and make wonderful companions. Our dogs are our family and treasured
             companions first, competition dogs second and we occasionally breed when we are looking to keep something
-            for ourselves. We train and compete in conformation, obedience, rally, nose work and agility. When we are
+            for ourselves. We train and compete in conformation, obedience, rally, nose work, herding and agility. When we are
             not training for competition you will often find us with the dogs hiking in the foothills, walking or biking
             along the Highline Canal or in the winter skijoring or snowshoeing in the mountains. Our dog’s health and
             wellbeing is our priority and we ensure this by providing daily exercise and mental stimulation, feeding a
