--- a/views/layla.ejs
+++ b/views/layla.ejs
@@ -38,7 +38,7 @@
                 <div class="sireDamDiv">
                     <div class="sireDamElement">
                         <h1>Sire</h1>
-                        <img src="/images/tango/tangosm.jpg" alt="">
+                        <img src="/images/mark/mark.jpg" alt="" style="min-height: 245.67px;">
                         <h3>
                              
                             AKC/ASCA CH <strong>CALAIS CAROLINA UNMARKED BILLS </strong>ATDs OTDd JHDs<br> 
