--- a/views/partials/nav_bar.ejs
+++ b/views/partials/nav_bar.ejs
@@ -19,9 +19,10 @@
         </li>
         <li class="dropMenu"><a href="/litters" >LITTERS</a>
             <ul class="menu vertical">
-                <li><a href="/litters/2020"><strong>!NEW! 2020 Upcomming Litter</strong></a></li>
+                <li><a href="/litters/new"><strong>!NEW! 2021 Upcomming Litter</strong></a></li>
                 <!-- <li><a href=""></a></li> -->
-                <li><a href="/litters/development">Puppy Early Development</a></li>
+                <li><a href="/litters/development">First 8 weeks at Highline</a></li>
+                <li><a href="/litters/future">Future Breedings</a></li>
                 <li><a href="/litters/past">Past Litters</a></li>
             </ul>
         </li>
