--- a/views/past_litters.ejs
+++ b/views/past_litters.ejs
@@ -1,5 +1,25 @@
 <div class="contentWrapper">
     <div class="bannerText">
-        <h1>Page Comming Soon!</h1>
+        <h1>Previous Litters</h1>
+    </div>
+    <div class="dogText dogText2 mainStyle">
+            <h2 style="text-align: center;"><a href="/litters/2020">Lulu Chandler litter</a> </h1>
+        </div>
+    <div id="topBox" class="dogBox" data-test="test">
+        
+        <div id="crushDiv" class="dogDiv">
+            <img src="/images/lulu/lulu_mainsm.jpg" alt="" id="litterLink" data-links="/litters/2020">
+                <h3>AKC GCH/ASCA CH Highline’s To Sir with Love  GS-N JS-N RS-N RNX RAX REX RMX DNA-VP
+                <br>
+                <a href="/ourdogs/lulu"><strong>LULU</strong></a>
+            </h3>
+        </div>
+        <div id="delaDiv" class="dogDiv">
+            <img src="/images/2020_litter/chandler_leftsm.jpg" alt="" id="litterLink" data-links="/litters/2020">
+            <h3>AKC CH/ASCA CH Calais Carolina Your Place Or Mine    
+                <br>
+                <a href="http://www.calaisaussies.com/chandler.html"><strong>CHANDLER</strong></a>
+            </h3>
+        </div>
     </div>
 </div>
