--- a/views/partials/_litter_alert.ejs
+++ b/views/partials/_litter_alert.ejs
@@ -1,4 +1,4 @@
 <div class="alert">
     <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
-    !NEW LITTER! LULU PUPPIES ARE HERE! Click <a href="/litters/2020">here</a> for more details! !NEW LITTER!
+    !NEW LITTER COMING SOON! LULU PUPPIES ARE ON THE WAY! Click <a href="/litters/new">here</a> for more details!
   </div>
